--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+        <div class="round"></div>
+        <div class="match"></div>
+        <div class="result"></div>
     </body>
 </html>
